@startuml
entity "Family" {
    *family_id : integer
    num : integer
    family_name : varchar(64)
    activate_code : varchar(255)
    description : text
}
entity "Category" {
    *category_id : integer
    name : varchar(64)
    parent_category_id : integer
}
entity "FamilyMember" {
    *member_id : integer
    name : varchar(64)
    relation : varchar(64)
    birth_date : date
    family_id : integer
}
entity "Income" {
    *income_id : integer
    member_id : integer
    amount : decimal(10,2)
    category : varchar(64)
    income_date : date
    family_id : integer
}
entity "Expense" {
    *expense_id : integer
    member_id : integer
    category : varchar(64)
    amount : decimal(10,2)
    description : varchar(255)
    expense_date : date
    family_id : integer
}
entity "Asset" {
    *asset_id : integer
    category : varchar(64)
    description : varchar(255)
    value : decimal(10,2)
    member_id : integer
    acquisition_date : date
    family_id : integer
}
entity "User" {
    *user_id : integer
    username : varchar(64)
    password : varchar(255)
    is_admin : boolean
    family_member_id : integer
}
FamilyMember ||--o{ Family : "belongs to"
Income ||--o{ FamilyMember : "generated by"
Income ||--o{ Category : "has category"
Income ||--o{ Family : "belongs to"
Expense ||--o{ FamilyMember : "spent by"
Expense ||--o{ Category : "has category"
Expense ||--o{ Family : "belongs to"
Asset ||--o{ FamilyMember : "owned by"
Asset ||--o{ Category : "has category"
Asset ||--o{ Family : "belongs to"
User ||--o{ FamilyMember : "associated with"
Category ||--o{ Category : "parent-child"
@enduml